Fixed events input for inline function call, and added catch for events taht are too short so that labels shift to inline

--- a/mini-calendar.css
+++ b/mini-calendar.css
@@ -26,13 +26,28 @@ body { font-family: sans-serif; }
   right: 0;
   bottom: 0;
 }
-h1, h3 { margin-bottom: 2px; }
+h1 { margin-bottom: 2px; }
 .subtitle { padding-left: 10px; }
 .event-container, .marker-container { padding: 2px; }
 #calendar-events-wrapper { padding: 0 10px; }
 #calendar-markers-wrapper { padding: 0 5px; }
 .marker-major .time { padding-right: 4px; }
 .event-name, .event-location { padding-bottom: 2px; }
+.inline-event .event-name,
+.inline-event .event-location,
+.inline-event .event-time-container { 
+  display: inline-block; 
+  padding: 0px 5px; 
+}
+.inline-event .event-name,
+.inline-event .event-location {
+  border-style: dotted;
+  border-right-width: 1px;
+  border-left-width: 0px;
+  border-top-width: 0px;
+  border-bottom-width: 0px;
+  border-color: #005e95;
+}
 
 /* Borders and Backgrounds */
 .event-container {
